2015-06-26  Charlie Zender  <zender@uci.edu>

	* Prevent not only duplicates, but sub-string duplicates in nco_cnv_cll_mth_add()

2015-06-25  Charlie Zender  <zender@uci.edu>

	* Warn when non-standard "cell_method" attribute is detected

	* Prevent nco_cnv_cf_cll_mth_add() from repeating existing cell_methods attribute

	* Move aed_prc functions to nco_att_utl.c to prepare for RX feature

2015-06-22  Charlie Zender  <zender@uci.edu>

	* Bump thr_nbr_max_fsh to 16 for ncks, to 8 (with -D >= 3) for ncwa

	* Version = 'git describe --abbrev=7 --dirty --always --tags', e.g., 4.5.1-alpha6-1-gaa4fe2b-dirty

2015-06-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.1-alpha6 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.1-alpha6 final changes'
	git tag -a 4.5.1-alpha6 -m 'Version 4.5.1-alpha6 tag: Works on Travis and with OpenMP when compiled with g++ 4.6.3-5.1.1';git push --tags

	* Code now passes Travis build when compiled with g++

	* Remove assert() from within OpenMP parallel regions for g++ 4.6.3 on Travis

	* Use older OpenMP shared() statement for g++ < 4.8.0 (for Travis)

	* Diagnose and discriminate g++ from gcc compiler

	* Code compiles warning-free with clang and g++ (without ESMF)

	* Isolated all ESMF library calls in nco_sld.c

2015-06-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.1-alpha5 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.1-alpha5 final changes'
	git tag -a 4.5.1-alpha5 -m 'Version 4.5.1-alpha5 tag: Revert some broken doc build changes, patch handling of library return codes by regression tests';git push --tags

	* Remove autobld/mdate-sh, a testimonial to wasted time

	* Add [int,long,NULL]_CEWI to quiet maybe-uninitialize warnings with GCC 4.8.2

	* Fix treatment of exiting with library as return code for regression tests

	* NCO 4.5.1-alpha4 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.1-alpha4 final changes'